refactor: serve requests with Virtual Threads